# claude-conductor

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
scripts/: build-fedora.sh
src/: App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: analytics.rs  chaining.rs  checkpoints.rs  ci_monitor.rs  code_search.rs  compliance.rs  config.rs  digest.rs  file_tracker.rs  git_graph.rs  lib.rs  marketplace.rs  plugins.rs  pty.rs  routing.rs  sessions.rs  sharing.rs  shell_env.rs  sso.rs  updater.rs  worktree.rs
src/__tests__/: EmptyState.test.tsx  ErrorBoundary.test.tsx  SessionCard.test.tsx  Sidebar.test.tsx  setup.ts
src/components/: AgentProfileEditor.tsx  BenchmarksPanel.tsx  BrowserPreview.tsx  CIMonitor.tsx  ChainEditor.tsx  CheckpointPanel.tsx  CodeSearch.tsx  CompliancePanel.tsx  ConfigPanel.tsx  DiffViewer.tsx  EmptyState.tsx  ErrorBoundary.tsx  FileChanges.tsx  GitGraph.tsx  HelpMenu.tsx  KanbanBoard.tsx  McpMarketplace.tsx  PluginManager.tsx  SessionCard.tsx  SessionReplay.tsx  Sidebar.tsx  SpatialCanvas.tsx  SplitPane.tsx  StatusPanel.tsx  TabBar.tsx  TemplateSelector.tsx  Terminal.tsx  UsagePanel.tsx  VoiceInput.tsx
src/hooks/: useTheme.ts
src/styles/: global.css
