[package]
name = "claude-conductor"
version = "0.3.0"
description = "Session manager for Claude Code"
authors = ["Steve Fulmer <sfulmer@redhat.com>"]
license = "MIT"
repository = "https://github.com/stevefulme1/claude-conductor"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.1", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
portable-pty = "0.8"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
parking_lot = "0.12"
getrandom = "0.2"
sha2 = "0.10"
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
